force-app/main/default/objects/Work_Order_Activity_Rules__c/Work_Order_Activity_Rules__c.object-meta.xml
<CustomObject>
    <description>DCP-43186:  Contains rule entries as records for various requirements related to the work order and activities including documents needed and tool debrief compliance.</description>
    <label>Work Order Activity Rules</label>
    <nameField>
        <label>Work Order Activity Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Work Order Activity Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>