force-app/main/default/objects/Work_Order_Activity_Rules__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>DCP-43186  To activate or deactivate the rule.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>