force-app/main/default/objects/Work_Order_Activity_Rules__c/fields/Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>Activity_Type__c</fullName>
    <description>DCP-43186  This is to store all the labor activity types. These should match with the labor activity types that are in the work detail object.</description>
    <label>Activity Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account Maintenance</fullName>
            </value>
            <value>
                <fullName>Calibration</fullName>
            </value>
            <value>
                <fullName>Cleanup</fullName>
            </value>
            <value>
                <fullName>Coding</fullName>
            </value>
            <value>
                <fullName>Consulting</fullName>
            </value>
            <value>
                <fullName>Customer Readiness</fullName>
            </value>
            <value>
                <fullName>Customer Service Review</fullName>
            </value>
            <value>
                <fullName>Dedicated Onsite Activities</fullName>
            </value>
            <value>
                <fullName>Depot Service</fullName>
            </value>
            <value>
                <fullName>DRAGEN IVD Platform</fullName>
            </value>
            <value>
                <fullName>Field Compliance Review</fullName>
            </value>
            <value>
                <fullName>Install</fullName>
            </value>
            <value>
                <fullName>Installation</fullName>
            </value>
            <value>
                <fullName>IQ/OQ</fullName>
            </value>
            <value>
                <fullName>IT Consult</fullName>
            </value>
            <value>
                <fullName>Letter of Acceptance accepted</fullName>
            </value>
            <value>
                <fullName>OQ</fullName>
            </value>
            <value>
                <fullName>PQ</fullName>
            </value>
            <value>
                <fullName>PQ Training</fullName>
            </value>
            <value>
                <fullName>Preventative Maintenance</fullName>
            </value>
            <value>
                <fullName>Qualification Service Review</fullName>
            </value>
            <value>
                <fullName>Relocation</fullName>
            </value>
            <value>
                <fullName>Remote Support</fullName>
            </value>
            <value>
                <fullName>Repair/Troubleshooting</fullName>
            </value>
            <value>
                <fullName>Return</fullName>
            </value>
            <value>
                <fullName>Sales Support Activity</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Upgrade</fullName>
            </value>
            <value>
                <fullName>Workflow Config</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>