force-app/main/default/objects/Work_Order_Activity_Rules__c/fields/Document_Name__c.field-meta.xml
<CustomField>
    <fullName>Document_Name__c</fullName>
    <description>DCP-43186 to specify the type of document needed for a given combination of instrument and activity type.</description>
    <label>Document Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>