force-app/main/default/objects/Work_Order_Activity_Rules__c/fields/Document_Number__c.field-meta.xml
<CustomField>
    <fullName>Document_Number__c</fullName>
    <description>DCP-43186 This field will determine document number</description>
    <label>Document Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>