force-app/main/default/objects/Work_Order_Activity_Rules__c/fields/Generic_Document__c.field-meta.xml
<CustomField>
    <fullName>Generic_Document__c</fullName>
    <defaultValue>false</defaultValue>
    <description>DCP-43186 to specify that a document is needed but not necessarily any specific type.</description>
    <label>Generic Document</label>
    <type>Checkbox</type>
</CustomField>