force-app/main/default/objects/Work_Order_Activity_Rules__c/fields/Is_Tool_Debrief_Mandatory__c.field-meta.xml
<CustomField>
    <fullName>Is_Tool_Debrief_Mandatory__c</fullName>
    <defaultValue>false</defaultValue>
    <description>DCP-41619 : Is Tool Debrief Mandatory?</description>
    <label>Is Tool Debrief Mandatory?</label>
    <type>Checkbox</type>
</CustomField>