force-app/main/default/objects/Work_Order_Activity_Rules__c/fields/New_Field_Values__c.field-meta.xml
<CustomField>
    <fullName>New_Field_Values__c</fullName>
    <description>DCP-43186 This field will store new field values  used in email template.</description>
    <label>New Field Values</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>