force-app/main/default/objects/Work_Order_Activity_Rules__c/fields/Old_Field_Values__c.field-meta.xml
<CustomField>
    <fullName>Old_Field_Values__c</fullName>
    <description>DCP-43186 This field will store old field values  used in email template.</description>
    <label>Old Field Values</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>