force-app/main/default/objects/Work_Order_Activity_Rules__c/fields/Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>DCP-43186  Lookup to product</description>
    <label>Product Code</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Work Order Activity Rules</relationshipLabel>
    <relationshipName>Product_Code</relationshipName>
    <type>Lookup</type>
</CustomField>