force-app/main/default/objects/Work_Order_Activity_Rules__c/fields/Repair_protocol__c.field-meta.xml
<CustomField>
    <fullName>Repair_protocol__c</fullName>
    <description>This field is used to display Repair protocol  selected multi picklist values for displaying it on Document upload.</description>
    <label>Repair protocol</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
			<value>
				<fullName>Optical: Camera 2 Replacement</fullName>
			</value>
			<value>
				<fullName>Optical: Regenerate data cc files</fullName>
			</value>
			<value>
				<fullName>Optical: Filter Slider replacement</fullName>
			</value>
			<value>
				<fullName>Optical: Filter Wheel replacement</fullName>
			</value>
			<value>
				<fullName>Optical: Camera Assembly replacement</fullName>
			</value>
			<value>
				<fullName>Optical: Objective lens replacement</fullName>
			</value>
			<value>
				<fullName>Optical: Laser replacement</fullName>
			</value>
			<value>
				<fullName>Optical: Z Stage replacement</fullName>
			</value>
			<value>
				<fullName>Electronics: MPCA replacement</fullName>
			</value>
			<value>
				<fullName>Electronics: VIX Controller replacement</fullName>
			</value>
			<value>
				<fullName>Electronics: PSU replacement</fullName>
			</value>
			<value>
				<fullName>Electronics: Framegrabber Card replacement</fullName>
			</value>
			<value>
				<fullName>Electronics: E-Box replacement</fullName>
			</value>
			<value>
				<fullName>Mechanical: Front Door Repair</fullName>
			</value>
			<value>
				<fullName>Mechanical: Drive Chain replacement</fullName>
			</value>
			<value>
				<fullName>Mechanical: Docking Station replacement</fullName>
			</value>
			<value>
				<fullName>Mechanical: XY Stage replacement</fullName>
			</value>
			<value>
				<fullName>Optical: Camera 1 Replacement</fullName>
			</value>
			<value>
				<fullName>Optical: Compensator Repairs</fullName>
			</value>
			<value>
				<fullName>Optical: F4/F8 Miror Replacement</fullName>
			</value>
			<value>
				<fullName>Optical: LED Replacement</fullName>
			</value>
			<value>
				<fullName>Optical: M3 Mirror Inspection &amp; Service</fullName>
			</value>
			<value>
				<fullName>Optical: M3 Mirror Replacement</fullName>
			</value>
			<value>
				<fullName>Electrical: Combo Board or Main Board Replacement</fullName>
			</value>
			<value>
				<fullName>Electrical: E-Box Replacement</fullName>
			</value>
			<value>
				<fullName>Electrical: Power Supply Replacement</fullName>
			</value>
			<value>
				<fullName>Electrical: SBC Board Replacement</fullName>
			</value>
			<value>
				<fullName>Electrical: Z-Stage Control Board Replacement</fullName>
			</value>
			<value>
				<fullName>Electrical: Reagent Cartridge RFID Replacement</fullName>
			</value>
			<value>
				<fullName>Electrical: Flow Cell RFID Replacement</fullName>
			</value>
        </valueSetDefinition>
    </valueSet>
</CustomField>