force-app/main/default/objects/Work_Order_Activity_Rules__c/fields/Requester__c.field-meta.xml
<CustomField>
    <fullName>Requester__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>DCP-43186 Storing Requester</description>
    <label>Requester</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Work_Order_Activity_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>