force-app/main/default/objects/Work_Order_Activity_Rules__c/fields/Required__c.field-meta.xml
<CustomField>
    <fullName>Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>DCP-43186 to specify that a document is Required or is just recommended.</description>
    <label>Required</label>
    <type>Checkbox</type>
</CustomField>