force-app/main/default/objects/Work_Order_Activity_Rules__c/recordTypes/Document_Compliance.recordType-meta.xml
<RecordType>
    <fullName>Document_Compliance</fullName>
    <active>true</active>
    <description>Provide ability to enforce or guide attaching one or more documents to a product based on the activity performed as part of a work order involving that product. The enforcement, if required, will take place when completing the work order.</description>
    <label>Document Compliance</label>
</RecordType>