force-app/main/default/objects/Work_Order_Activity_Rules__c/recordTypes/Tool_Debrief_Compliance.recordType-meta.xml
<RecordType>
    <fullName>Tool_Debrief_Compliance</fullName>
    <active>true</active>
    <description>At completion the user will be prevented from completing the work order unless they have debriefed a Tool or they have selected the &quot;No Calibrated Tool used&quot; and then provided a &quot;Reason for not Debriefing tools&quot;.</description>
    <label>Tool Debrief Compliance</label>
</RecordType>