force-app/main/default/objects/Work_Order_Activity_Rules__c/validationRules/PreventEditonWorkOrderActivityRules.validationRule-meta.xml
<ValidationRule>
    <fullName>PreventEditonWorkOrderActivityRules</fullName>
    <active>true</active>
    <description>only Active Check Box can be edited .</description>
    <errorConditionFormula>AND (
    NOT($Profile.Name ==$Label.Integration_SAP_Service),
    NOT($Profile.Name == $Label.Integration_Service_SNAP_Profile),
    NOT($User.FirstName ==$Label.Automated_Process_User), 
    NOT($Setup.cs_Apex_Settings__c.Bypass_All_Validations__c), 
    NOT( ISNEW() ) ,NOT( ISCHANGED( Active__c )) )</errorConditionFormula>
    <errorMessage>only Active Check box can be Edited. Please deactivate the record and Create a new record for any Criteria Changes.</errorMessage>
</ValidationRule>