force-app/main/default/objects/Work_Order_Activity_Rules__c/validationRules/WO_Activity_Product_Group_Code_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>WO_Activity_Product_Group_Code_Required</fullName>
    <active>true</active>
    <description>DCP-43186 Product Group or code required</description>
    <errorConditionFormula>ISBLANK(Product_Code__c) &amp;&amp; ISPICKVAL(Product_Group__c ,&apos;&apos;)</errorConditionFormula>
    <errorMessage>Please Select Product Code or Product Group</errorMessage>
</ValidationRule>