force-app/main/default/objects/Work_Order_Activity_Rules__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Document_Name__c</columns>
    <columns>Document_Number__c</columns>
    <columns>Generic_Document__c</columns>
    <columns>Is_Tool_Debrief_Mandatory__c</columns>
    <columns>Product_Code__c</columns>
    <columns>Product_Group__c</columns>
    <columns>Activity_Type__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>