force-app/main/default/objects/Work_Order_Activity_Rules__c/listViews/All_Active_Rules.listView-meta.xml
<ListView>
    <fullName>All_Active_Rules</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Document_Name__c</columns>
    <columns>Document_Number__c</columns>
    <columns>Generic_Document__c</columns>
    <columns>Is_Tool_Debrief_Mandatory__c</columns>
    <columns>Product_Code__c</columns>
    <columns>Product_Group__c</columns>
    <columns>Activity_Type__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Active Rules</label>
    <language>en_US</language>
</ListView>