force-app/main/default/objects/Work_Order_Activity_Rules__c/listViews/Work_Order_Activity_Rules_Approval_Queue_Work_Order_Activity_Rules.listView-meta.xml
<ListView>
    <fullName>Work_Order_Activity_Rules_Approval_Queue_Work_Order_Activity_Rules</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Document_Name__c</columns>
    <columns>Document_Number__c</columns>
    <columns>Generic_Document__c</columns>
    <columns>Is_Tool_Debrief_Mandatory__c</columns>
    <columns>Product_Code__c</columns>
    <columns>Product_Group__c</columns>
    <columns>Activity_Type__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Approval_Status__c</field>
        <operation>equals</operation>
        <value>Pending</value>
    </filters>
    <label>Work Order Activity Rules Approval Queue</label>
    <language>en_US</language>
</ListView>