force-app/main/default/objects/Work_Order_Activity_Rules__c/listViews/Work_Order_Activity_Rules_Approval_Queue_Work_Order_Activity_Rules1.listView-meta.xml
<ListView>
    <fullName>Work_Order_Activity_Rules_Approval_Queue_Work_Order_Activity_Rules1</fullName>
    <filterScope>Queue</filterScope>
    <label>Work Order Activity Rules Approval Queue</label>
    <queue>Work_Order_Activity_Rules_Approval_Queue</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>